--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Optimisteries
+author: Aurélien Rodot
+email: hi@aurelienrodot.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Mon carnet de voyage de l'ordinaire.
+  Pour apprécier aujourd'hui,
+  et penser à demain.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.aurelienrodot.com" # the base hostname & protocol for your site, e.g. http://example.com
+facebook_username: aurelienrodot
+instagram_username: aurelienrodot
+twitter_username: aurelienrodot
 
 # Build settings
 theme: minima
+show_excerpts: true
+minima:
+  date_format: "%Y-%m-%d"
+
 plugins:
   - jekyll-feed
 
