--- a/_data/picture.yml
+++ b/_data/picture.yml
@@ -2,8 +2,8 @@ presets:
   default:
     markup: auto
     formats: [original]
-    widths: [200, 400, 600, 800, 1000]
-    fallback_width: 600
+    widths: [400, 600, 740]
+    fallback_width: 740
     fallback_format: original
     noscript: false
     link_source: true
