--- a/.github/workflows/jekyll-cd.yml
+++ b/.github/workflows/jekyll-cd.yml
@@ -20,6 +20,7 @@ jobs:
       - name: 📷 Install ImageMagick
         run: |
           sudo apt-get install imagemagick
+          sudo apt-get install webp
       - name: 🧹 Clean site
         run: |
           if [ -d "_site" ]; then
