Add picture height (anti-loading-jank)

--- a/_data/picture.yml
+++ b/_data/picture.yml
@@ -10,4 +10,4 @@ presets:
     quality: 75
     data_sizes: true
     gravity: center
-    dimension_attributes: false
+    dimension_attributes: true
