--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll_picture_tag
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
