--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,7 @@
 title: Aurélien Rodot's stuff
 author: Aurélien Rodot
 email: hi@aurelienrodot.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Mon carnet de voyage de l'ordinaire.
-  Pour apprécier aujourd'hui,
-  et penser à demain.
+description: Stuff I made, stuff I liked.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.aurelienrodot.com" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: aurelienrodot
