Move tag list to header

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,12 @@ plugins:
   - jekyll_picture_tag
   - jekyll-seo-tag
 
+header_pages:
+  - index.md
+  - tags/maker.md
+  - tags/travel.md
+  - about.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
